# mosaic

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/commands/: release.md
.github/workflows/: ci.yml  defaults-sync-check.yml  pages.yml  release.yml
docs/: 2026-04-14-mosaic-cli-design.md  2026-04-14-mosaic-cli-plan.md  2026-04-14-mosaic-design.md  2026-04-14-mosaic-distribution-plan.md  2026-04-14-mosaic-plan.md  README.md
docs/superpowers/plans/: 2026-04-15-animated-preview-reel.md  2026-04-16-extraction-fixes.md  2026-04-16-mediainfo-modal.md  2026-04-18-mosaic-cli.md  2026-04-19-mosaic-cli-distribution.md
docs/superpowers/specs/: 2026-04-15-animated-preview-reel-design.md  2026-04-16-animated-contact-sheet-design.md  2026-04-16-extraction-fixes-design.md  2026-04-16-mediainfo-modal-design.md  2026-04-17-auto-update-design.md  2026-04-17-displayed-dims-and-enrichment-design.md  2026-04-17-hdr-tonemapping-design.md  2026-04-17-showcase-site-design.md  2026-04-18-mosaic-cli-design.md  2026-04-19-mosaic-cli-distribution-design.md
mosaic-cli/: Cargo.toml
mosaic-cli/src/: cli.rs  config.rs  font.rs  hints.rs  main.rs  progress.rs
mosaic-cli/src/run/: animated_sheet.rs  format.rs  mod.rs  probe.rs  reel.rs  screenshots.rs
mosaic-cli/tests/: cli.rs
scripts/: bump-version.mjs  sync-defaults.mjs
site/: cli.html  guide.html  index.html  install.ps1  install.sh
site/assets/: download.js  style.css
src/: dropzone.js  events.js  index.html  main.js  mediainfo.js  options.js  queue.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: animated_sheet.rs  commands.rs  contact_sheet.rs  defaults.rs  drawtext.rs  events.rs  ffmpeg.rs  header.rs  input_scan.rs  jobs.rs  layout.rs  lib.rs  main.rs  mediainfo.rs  output_path.rs  preview_reel.rs  screenshots.rs  video_info.rs
src-tauri/tests/: cli.rs  integration.rs
src-tauri/tests/fixtures/: ffprobe_missing_duration.json  ffprobe_no_audio.json  ffprobe_typical.json  mediainfo_awaken.json  mediainfo_iphone.json
