[package]
name = "mosaic-cli"
version = "0.1.5"
edition = "2021"
description = "Command-line interface for Mosaic — video contact sheets, screenshots, animated previews, and probe metadata"
authors = ["Abi"]
license = "MIT"
repository = "https://github.com/mosaicvideo/mosaic"

[[bin]]
name = "mosaic-cli"
path = "src/main.rs"

[dependencies]
mosaic = { path = "../src-tauri", features = ["cli"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
indicatif = "0.17"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "signal"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
