[package]
name = "mosaic"
version = "0.1.1"
description = "Cross-platform desktop app for generating video contact sheets, screenshots, animated preview reels, and animated contact sheets"
authors = ["Bhutan IO"]
license = "MIT"
homepage = "https://github.com/bhutanio/mosaic"
repository = "https://github.com/bhutanio/mosaic"
edition = "2021"

[lib]
name = "mosaic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Exposes internal modules (video_info, output_path, ffmpeg, contact_sheet,
# screenshots) and test hooks for the integration test. Off by default so the
# shipped binary keeps these as private implementation details.
test-api = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
tempfile = "3"
thiserror = "2"
which = "8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
which = "8"

[[test]]
name = "integration"
required-features = ["test-api"]
