[package]
name = "mosaic"
version = "0.1.3"
description = "Cross-platform desktop app for generating video contact sheets, screenshots, animated preview reels, and animated contact sheets"
authors = ["Abi"]
license = "MIT"
homepage = "https://github.com/mosaicvideo/mosaic"
repository = "https://github.com/mosaicvideo/mosaic"
edition = "2021"
default-run = "mosaic"

[lib]
name = "mosaic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Exposes internal modules (video_info, output_path, ffmpeg, contact_sheet,
# screenshots) and test hooks for the integration test. Off by default so the
# shipped binary keeps these as private implementation details.
test-api = []
# Placeholder declared early so `feature = "cli"` cfg references compile cleanly
# under check-cfg / -D warnings. Task 4 (CLI binary) will populate this.
cli = ["dep:clap", "dep:indicatif", "dep:toml"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "signal"] }
tempfile = "3"
thiserror = "2"
which = "8"
clap      = { version = "4",    features = ["derive"], optional = true }
indicatif = { version = "0.17",                          optional = true }
toml      = { version = "0.8",                           optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
which = "8"
assert_cmd = "2"
predicates = "3"

[[test]]
name = "integration"
required-features = ["test-api"]

[[bin]]
name = "mosaic-cli"
path = "src/bin/mosaic_cli/main.rs"
required-features = ["cli"]

[[test]]
name = "cli"
required-features = ["cli", "test-api"]
